k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abc-retail
  labels:
    app.kubernetes.io/name: abc-retail
    app.kubernetes.io/part-of: abc-technologies
