k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc-retail-nginx
  namespace: abc-retail
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: abc-retail.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abc-retail
                port:
                  name: http
